# marquito

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  taskfile.yaml
.github/workflows/: release.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_tags_table.py  0003_add_facets_columns.py  0004_traceability.py  0005_audit_gaps.py
helm/marquito/: Chart.yaml  values.yaml
helm/marquito/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  migrate-job.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/marquito/: main.py
src/marquito/api/v1/endpoints/: admin.py  datasets.py  events.py  jobs.py  namespaces.py  openlineage.py  search.py  stats.py  tags.py
src/marquito/cli/: main.py
src/marquito/core/: config.py
src/marquito/db/: session.py
src/marquito/graphql/: schema.py
src/marquito/models/: orm.py
src/marquito/schemas/: api.py  dataset_versions.py  stats.py  tags.py
src/marquito/services/: cleanup.py  facets.py  lineage.py  stats.py
tests/: test_api.py  test_cleanup.py
